test/tests/stages/18_structures/invalid_types/extra_credit/scalar_required/union_as_controlling_expression.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[35]:
  union
  identifier(u)
  {
  int
  identifier(x)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u)
  identifier(my_union)
  =
  {
  const int(10)
  }
  ;
  if
  (
  identifier(my_union)
  )
  {
  return
  const int(1)
  ;
  }
  return
  const int(0)
  ;
  }
